Updating Item Input to be a Display Prompt, also other changes because mac

--- a/ShoppingList/View/ItemInput.xaml
+++ b/ShoppingList/View/ItemInput.xaml
@@ -6,6 +6,7 @@
              x:DataType="viewmodel:ItemInputViewModel"
              x:Class="ShoppingList.ItemInput"
              Shell.PresentationMode="Animated"
+             Padding="50"
              >
 
     <Grid ColumnDefinitions="*,*,*,*,Auto,Auto"
