--- a/ShoppingList/AppShell.xaml
+++ b/ShoppingList/AppShell.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="ShoppingList.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -14,10 +14,10 @@
 
 
     <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
-        <ShellContent Title="Settings" 
-                      Icon="settings_outline.svg"
+        <ShellContent Title="Settings Test" 
                       Route="SettingsView"
                       ContentTemplate="{DataTemplate views:SettingsView}"/>
+        <!-- Had to remove Icon, it was causing issues on IOS, Settings page wouldn't route-->
 
     </FlyoutItem>
 
