--- a/ShoppingList/View/UserListDetails.xaml
+++ b/ShoppingList/View/UserListDetails.xaml
@@ -83,15 +83,15 @@
        <!-- </RefreshView>-->
        <controls:CircularButton  
 			            Grid.Row="0"
-			            Grid.Column="0"
+			            Grid.Column="2"
                         x:Name="CircularButton"
                         WidthRequest="75"
                         HeightRequest="75"
-                        Margin="15,0,0,0"
-                        ButtonColor="{StaticResource Primary}"
+                        Margin="0,0,40,20"
+                        ButtonColor="{StaticResource Secondary}"
                         BackgroundColor="Transparent"
                         VerticalOptions="End"
-                        HorizontalOptions="Start"
+                        HorizontalOptions="End"
 			            >
             <GraphicsView.GestureRecognizers>
 	            <TapGestureRecognizer Command="{Binding NewItemDialogCommand}"/>
